Fixed: Responsive menu dropdown on firefox

--- a/framework/assets/sass/navigation/_flexia-menu.scss
+++ b/framework/assets/sass/navigation/_flexia-menu.scss
@@ -193,7 +193,7 @@
             top: 100%;
             left: 5%;
             right: 5%;
-            z-index: 99;
+            z-index: 100;
             display: none;
             padding: 20px 20px 10px;
 
