--- a/framework/assets/sass/style.css
+++ b/framework/assets/sass/style.css
@@ -4235,7 +4235,7 @@ a:hover, a:active {
     top: 100%;
     left: 5%;
     right: 5%;
-    z-index: 99;
+    z-index: 100;
     display: none;
     padding: 20px 20px 10px;
   }
